@startuml

entity users {
    * id : INTEGER <<PK>>
    --
    username : TEXT
    password_hash : TEXT
    created_at : TEXT
}

entity roles {
    * id : INTEGER <<PK>>
    --
    name : TEXT
    description : TEXT
}

entity permissions {
    * id : INTEGER <<PK>>
    --
    name : TEXT
    description : TEXT
}

entity role_permissions {
    * id : INTEGER <<PK>>
    --
    role_id : INTEGER <<FK>>
    permission_id : INTEGER <<FK>>
}

entity projects {
    * id : INTEGER <<PK>>
    --
    name : TEXT
    code : TEXT
    description : TEXT
    start_date : TEXT
    status : TEXT
    created_by : INTEGER <<FK>>
    created_at : TEXT
    updated_at : TEXT
    deleted_at : TEXT
}

entity project_users {
    * id : INTEGER <<PK>>
    --
    project_id : INTEGER <<FK>>
    user_id : INTEGER <<FK>>
    role_id : INTEGER <<FK>>
    added_at : TEXT
}

entity phases {
    * id : INTEGER <<PK>>
    --
    project_id : INTEGER <<FK>>
    name : TEXT
    start_date : TEXT
    end_date : TEXT
    status : TEXT
    order_index : INTEGER
    objective: TEXT
    scope: TEXT
    observations: TEXT
}

entity iterations {
    * id : INTEGER <<PK>>
    --
    phase_id : INTEGER <<FK>>
    name : TEXT
    goal : TEXT
    start_date : TEXT
    end_date : TEXT
    completion_percentage : INTEGER
}

entity microincrements {
    * id : INTEGER <<PK>>
    --
    iteration_id : INTEGER <<FK>>
    title : TEXT
    description : TEXT
    date : TEXT
    author_id : INTEGER <<FK>>
    type : TEXT
    artifact_id : INTEGER <<FK>>
    evidence_url : TEXT
}

entity artifacts {
    * id : INTEGER <<PK>>
    --
    project_id : INTEGER <<FK>>
    phase_id : INTEGER <<FK>>
    name : TEXT
    artifact_type : TEXT
    mandatory : INTEGER
    description : TEXT
    current_state : TEXT
}

entity artifact_versions {
    * id : INTEGER <<PK>>
    --
    artifact_id : INTEGER <<FK>>
    version_number : INTEGER
    created_by : INTEGER <<FK>>
    created_at : TEXT
    notes : TEXT
    file_blob : BLOB
    file_mime : TEXT
    build_info : TEXT
}

' ------------------------
' RELACIONES
' ------------------------

' Users ↔ Projects (created_by)
users ||--o{ projects : "creates"

' Many-to-many: Roles ↔ Permissions
roles ||--o{ role_permissions
permissions ||--o{ role_permissions

' Project ↔ Users (with role)
projects ||---o{ project_users
users ||--o{ project_users
roles ||--o{ project_users

' Project → Phases
projects ||--o{ phases

' Phase → Iterations
phases ||--o{ iterations

' Iteration → Microincrements
iterations ||--o{ microincrements

' Users → Microincrements (author)
users ||--o{ microincrements : "writes"

' Microincrement → Artifact (optional)
artifacts ||--o{ microincrements : "linked to"

' Project/Phase → Artifacts
phases ||--o{ artifacts

' Artifact → Versions
artifacts ||--o{ artifact_versions

' Users → Artifact Versions
users ||--o{ artifact_versions : "uploads"

@enduml
